--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ before_install:
   - gem --version
 script:
   - bin/rails db:migrate RAILS_ENV=test
+  - bin/rails db:seed RAILS_ENV=test
   - bundle exec rspec spec/
 addons:
   firefox: "18.0"
