Achieve 100% rubocop coverage

--- a/config/.rubocop.yml
+++ b/config/.rubocop.yml
@@ -20,13 +20,5 @@ BlockLength:
 Style/FrozenStringLiteralComment:
   Enabled: false
 
-Style/LineLength:
+Metrics/LineLength:
   Enabled: false
-
-Lint/Eval:
-  Exclude:
-    - 'app/helpers/calculations_helper.rb'
-
-Lint/AmbiguousRegexpLiteral:
-  Exclude:
-    - 'spec/views/home/index.html.erb_spec.rb'
