Add simplecov to project to check test coverage

--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,10 @@
 .byebug_history
 
 # Ignore all public assets
-public/assets/**
+/public/assets/**
 
 # Ignore application configuration
 /config/application.yml
+
+# Ignore coverage file
+coverage
